--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ img.emoji {
 
 
 
-<h1 class="alignwide has-text-align-center">Top 10 trang web xem phim hay nhất Việt Nam [Năm 2021]</h1>
+<h1 class="alignwide has-text-align-center">Top 10 trang web xem phim hay nhất Việt Nam Năm 2021</h1>
 
 
 
