--- a/lien-he/index.html
+++ b/lien-he/index.html
@@ -8,7 +8,8 @@
 <!-- Search Engine Optimization by Rank Math - https://s.rankmath.com/home -->
 <title>Liên hệ - ThanhSang</title>
 <meta name="description" content="Zalo: 0903908047">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<link rel="canonical" href="https://thanhsang2168.github.io/mywordpress/lien-he/">
 <meta property="og:locale" content="vi_VN">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Liên hệ - ThanhSang">
@@ -509,7 +510,7 @@ img.emoji {
 </li>
 <li class="email">
 <i class=" icon-envelope" aria-hidden="true" role="img"></i><div class="oceanwp-info-wrap">
-<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:s&#097;&#110;&#103;&#050;0&#048;&#050;1&#054;08&#064;&#103;&#109;&#097;i&#108;&#046;com">sang20021608@gmail.com</a><span class="screen-reader-text">Opens in your application</span></span>
+<span class="oceanwp-contact-title">Email:</span><span class="oceanwp-contact-text"><a href="mailto:&#115;ang&#050;0&#048;2&#049;&#054;&#048;&#056;&#064;g&#109;ai&#108;&#046;&#099;om">sang20021608@gmail.com</a><span class="screen-reader-text">Opens in your application</span></span>
 </div>
 </li>
 <li class="web">
